fixed spacing with devicons

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -19,7 +19,7 @@ div.contact-section{
       margin-left: 15px;
     }
     i.fa {
-      font-size: 50px;
+      font-size: 45px;
     }
     a:hover{
       text-decoration: none;
@@ -55,10 +55,10 @@ div.contact-section{
     position: absolute;
     text-align: left;
     margin-left: 60px;
-    font-size: 25px;
+    font-size: 22px;
   }
   i.fa {
-    font-size: 80px;
+    font-size: 60px;
   }
   a:hover{
     text-decoration: none;
@@ -74,7 +74,7 @@ div.contact-section{
     position: absolute;
     text-align: left;
     margin-left: 100px;
-    font-size: 25px;
+    font-size: 22px;
     // .ga-icon {
     //   width: 110px;
     //   color: $font-blue;
@@ -82,7 +82,7 @@ div.contact-section{
     //   margin-left: 15px;
     // }
     i.fa {
-      font-size: 80px;
+      font-size: 70px;
     }
     a:hover{
       text-decoration: none;
