--- a/src/scss/_skills.scss
+++ b/src/scss/_skills.scss
@@ -42,7 +42,7 @@ div.skills-box {
       display: inline-block;
       font-size: 100px;
       color: $font-blue;
-      padding: 20px;
+      padding: 10px;
       word-wrap: break-word;
     }
   }
@@ -55,7 +55,7 @@ div.skills-box {
       display: inline-block;
       font-size: 120px;
       color: $font-blue;
-      padding: 20px;
+      padding: 15px;
       word-wrap: break-word;
     }
   }
